...
    
    enum MessageType: String {
        case getHistory = "getHistory"
        case saveHistory = "saveHistory"
        case clearHistory = "clearHistory"
        case getSettings = "getSettings"
        case saveSettings = "saveSettings"
        case unknown
    }
    
    let logger = OSLog(subsystem: "xyz.chroniclesync.app.extension", category: "SafariWebExtensionHandler")

    func beginRequest(with context: NSExtensionContext) {
...
